hphp/hack/test/typecheck/reactive/parse_multiple2.php.exp
File "parse_multiple2.php", line 3, characters 3-21:
Only one of following annotations is allowed: `__Pure`, `__NonRx`, `__Cipp`, `__CippLocal`, `__CippGlobal`. (Parsing[1002])
