hphp/hack/test/typecheck/reactive/parse_multiple2.php
<?hh // strict

class C {
  <<__Rx, __RxLocal>>
  public function f(): void {}
}
